# kloc-mapper

./: .gitignore  CLAUDE.md  README.md  build.sh  build_entry.py  improvments.md  issues.md  pyproject.toml
.claude/progress/scip-php-indexer-issues/: progress-v1.md
src/: __init__.py  __main__.py  archive.py  calls_mapper.py  cli.py  json_parser.py  mapper.py  models.py  parser.py  scip_pb2.py
tests/: __init__.py  test_classify_symbol.py  test_mapper.py  test_models.py  test_parser.py
