[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kloc-mapper"
version = "0.1.0"
description = "SCIP to Source-of-Truth JSON mapper for KLOC"
requires-python = ">=3.10"
dependencies = [
    "protobuf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
kloc-mapper = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
